--- a/src/Styles/SearchStyle.css
+++ b/src/Styles/SearchStyle.css
@@ -8,7 +8,7 @@
 
 
 nav{
-    background-color: rgb(248, 226, 198);
+    background-color: rgb(252, 197, 141);
     width: 100%;
     height: 54px;
     top: 0;
@@ -21,6 +21,7 @@ nav{
 
 
 nav .logo {
+    text-decoration: none;
     font-size: 18px;
     font-weight: bold;
     color: rgb(116, 116, 116);
@@ -62,15 +63,17 @@ nav ul li a{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(252, 236, 214);
+    background-color: rgb(246, 220, 184);
     opacity: 0.9;
-    border-radius: 34px;
+    border-radius: 24px;
     position: relative;
+    margin: 10px auto;
+    margin-top: 10%;
 
 }
 
 .Search-title {
-    color: rgb(245, 200, 141);
+    color: rgb(255, 195, 118);
     padding: 20px;
     margin-top: 10%;
     margin-left: 4%;
