--- a/src/Styles/SearchStyle.css
+++ b/src/Styles/SearchStyle.css
@@ -8,11 +8,12 @@
 
 
 nav{
-    background-color: rgb(252, 197, 141);
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    background-color: rgb(86, 86, 86);
     width: 100%;
     height: 54px;
-    top: 0;
-    left: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -24,7 +25,7 @@ nav .logo {
     text-decoration: none;
     font-size: 18px;
     font-weight: bold;
-    color: rgb(116, 116, 116);
+    color: rgb(255, 255, 255);
 
 }
 
@@ -37,39 +38,31 @@ nav ul li{
 nav ul li a{
     text-decoration: none;
     font-size: 18px;
-    color: rgb(158, 158, 158);
+    color: rgb(255, 255, 255);
     font-weight: bold;
 }
-
-.image-back img{
-    max-width: 100%;
-    height: auto;
+.myVideo{
     position: absolute;
+    width: 100%;
+    top: 35px;
+    right: 0;
+    left: 0;
+    z-index: -1;
 }
 
-.card-content {
-    background-color: rgb(252, 236, 214);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30%;
-
-}
-
-.search-container{
-    width: 56%;
-    height: 240px;
+.card-content{
+    backdrop-filter: blur(18px);
+    border: solid;
+    border-color: grey;
+    border-radius: 24px;
+    width: 50vw;
+    height: 34vh;
     padding: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(246, 220, 184);
-    opacity: 0.9;
-    border-radius: 24px;
-    position: relative;
-    margin: 10px auto;
-    margin-top: 10%;
 
+    margin: 10% auto;
 }
 
 .Search-title {
