--- a/src/Styles/IndexStyle.css
+++ b/src/Styles/IndexStyle.css
@@ -16,10 +16,11 @@
 }
 
 nav{
+    overflow: hidden;
+    position: fixed;
     background-color: rgb(248, 226, 198);
     width: 100%;
     height: 54px;
-    position: absolute;
     top: 0;
     left: 0;
     display: flex;
@@ -61,10 +62,12 @@ nav ul li a{
 
 .content{
     text-align: center;
+    padding: 2%;
+    background-color: rgba(122, 122, 122, 0.3);
+    border-radius: 20px;
 }
 
 .content h1{
-    padding: 16px;
     font-size: 80px;
     color:rgb(248, 210, 161);
     font-weight: bold;
