--- a/src/Styles/IndexStyle.css
+++ b/src/Styles/IndexStyle.css
@@ -5,16 +5,6 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.container{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 nav{
     overflow: hidden;
     position: fixed;
@@ -58,13 +48,25 @@ nav ul li a{
     right: 0;
     left: 0;
     z-index: -1;
-} 
+}
+
+.container{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .content{
     text-align: center;
+    width: 100%;
     padding: 2%;
     background-color: rgba(122, 122, 122, 0.3);
-    border-radius: 20px;
+    backdrop-filter: blur(5px);
+
 }
 
 .content h1{
