--- a/src/Styles/SearchStyle.css
+++ b/src/Styles/SearchStyle.css
@@ -51,24 +51,38 @@ nav ul li a{
 }
 
 .card-content{
-    backdrop-filter: blur(18px);
+    backdrop-filter: blur(16px);
     border: solid;
     border-color: rgb(207, 207, 207);
     border-radius: 24px;
     width: 50vw;
     height: 34vh;
     padding: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
     margin: 10% auto;
 }
 
-.Search-title {
-    color: rgb(255, 195, 118);
+.card-content h1 {
+    color: rgb(237, 237, 237);
     padding: 20px;
-    margin-top: 10%;
-    margin-left: 4%;
-    position: relative;
+    margin-top: 0;
+    font-size: 40px;
+    text-align: center;
+    margin: 2%;
+}
+
+.card-content p{
+    color: aliceblue;
+    padding: 2%;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.card-content .select-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-content select{
+    padding: 2%;
 }
