--- a/src/Styles/IndexStyle.css
+++ b/src/Styles/IndexStyle.css
@@ -8,7 +8,7 @@
 nav{
     overflow: hidden;
     position: fixed;
-    background-color: rgb(208, 197, 182);
+    background-color: rgb(214, 186, 150);
     width: 100%;
     height: 54px;
     top: 0;
@@ -24,7 +24,7 @@ nav .logo {
     text-decoration: none;
     font-size: 18px;
     font-weight: bold;
-    color: rgb(79, 79, 79);
+    color: rgb(47, 44, 32);
 
 }
 
@@ -65,7 +65,7 @@ nav ul li a{
     width: 100%;
     padding: 2%;
     background-color: rgba(122, 122, 122, 0.3);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(6px);
 
 }
 
@@ -73,21 +73,19 @@ nav ul li a{
     font-size: 80px;
     color:rgb(255, 210, 152);
     font-weight: bold;
+    padding: 2%;
 }
 
 .content a{
     text-decoration: none;
     display: inline-block;
     color: rgb(248, 210, 161);
-    font-size: 24px;
+    font-size: 30px;
     border: 2px solid rgb(248, 226, 198);
     border-radius: 50px;
-    padding: 4px 50px;
+    padding: 16px 80px;
 }
 
-footer{
-    text-align: center;
-}
 
 footer .copyright-text {
     display: flex;
