--- a/src/Styles/BrandsStyle.css
+++ b/src/Styles/BrandsStyle.css
@@ -5,11 +5,15 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 }
 
+body {
+    background-color: rgb(53, 53, 53);
+}
+
 nav{
     overflow: hidden;
     position: fixed;
     top: 0;
-    background-color: rgb(86, 86, 86);
+    background-color: rgb(36, 36, 36);
     width: 100%;
     height: 54px;
     display: flex;
@@ -24,7 +28,6 @@ nav .logo {
     font-size: 18px;
     font-weight: bold;
     color: rgb(255, 255, 255);
-
 }
 
 nav ul li{
@@ -46,6 +49,8 @@ h1 {
     justify-content: center;
     margin-top: 10%;
     margin-bottom: 0;
+    color: rgb(194 155 155);
+    font-style: italic;
 }
 
 .card-content{
@@ -55,5 +60,38 @@ h1 {
     height: 100%;
     padding: 24px;
     margin: 2% auto;
+    border-color: #fad8d8;
+    
+}
+
+.card-content a{
+    padding: 4%;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    text-decoration: none;
+    border-radius: 10px;
+    -webkit-transition: background-color 0.2s;
+
+}
+
+.card-content :hover{
+    cursor: pointer;
+    background-color: rgb(85, 78, 78);
+    border-radius: 10px;
+}
+
+.card-content p{
+    color: white;
+    text-align:center; 
+    overflow-wrap: anywhere;
+
+}
+
+.card-content img {
+    width: 20%;
+    height: 20%;
+    padding-right: 4%;
+
 }
 
